--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
         "vue": "^3.2.31"
     },
     "dependencies": {
+        "@mdi/font": "^7.2.96",
+        "@mdi/js": "^7.2.96",
         "vuetify": "^3.0.0-beta.9"
     }
 }
