--- a/package.json
+++ b/package.json
@@ -23,6 +23,6 @@
     "dependencies": {
         "@mdi/font": "^7.2.96",
         "@mdi/js": "^7.2.96",
-        "vuetify": "^3.0.0-beta.9"
+        "vuetify": "3.1.15"
     }
 }
