--- a/package.json
+++ b/package.json
@@ -23,6 +23,9 @@
     "dependencies": {
         "@mdi/font": "^7.2.96",
         "@mdi/js": "^7.2.96",
+        "@vuepic/vue-datepicker": "^4.4.0",
+        "date-fns": "^2.29.3",
+        "moment-timezone": "^0.5.43",
         "vuetify": "3.1.15"
     }
 }
